tests/positive/Termination/Undefined.juvix
module Undefined;

axiom A : Type;

terminating
undefined (dummy : A) : A := undefined dummy;
