tests/negative/NoNamedArguments.juvix
module NoNamedArguments;

axiom T : Type;

axiom B : T (x := Type);
